Fix vertical resizing and color picker on Safari

--- a/src/css/collage/_structure.scss
+++ b/src/css/collage/_structure.scss
@@ -59,7 +59,14 @@
 }
 
 .collage-btn input[type=color] {
-  display: none;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 @mixin halfTriangle($vertical, $horizontal, $triangle-size) {
