--- a/src/css/menu/_selectionBox.scss
+++ b/src/css/menu/_selectionBox.scss
@@ -1,7 +1,7 @@
 /* ---Selection box--- */
 
 .album-selection {
-  height: 100%;
+  flex: 1 1;
 
   p {
     color: $neutral;
