--- a/src/css/menu/_shapeSelect.scss
+++ b/src/css/menu/_shapeSelect.scss
@@ -48,7 +48,6 @@
     padding: 8px;
     font-size: 1.05em;
     font-weight: bold;
-    width: 102px;
     height: 40px;
     margin-top: 15px;
     transition: none;
